--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Electron App to view images",
   "main": "index.js",
   "scripts": {
-    "dev": "electron index.js",
+    "dev": "electron src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
